--- a/MrBright/index.html
+++ b/MrBright/index.html
@@ -42,7 +42,7 @@
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                 <ul class="nav navbar-nav navbar-right">
                                     <li><a href="#home">Home</a></li>
-                                    <li><a href="#Gallery">Gallery</a></li>
+                                    <li><a href="#gallery">Gallery</a></li>
                                     <li><a href="#about">About</a></li>
                                     <li><a href="#testimonials">What We Offer</a></li>
                                     <li><a href="#pricing">Pricing</a></li>
@@ -76,7 +76,7 @@
     </section>
     <!-- end of banner section -->
     <!-- feature sectiona -->
-    <section class="pricing-slide" id="features">
+    <section class="pricing-slide" id="gallery" id="features">
         <div class="container">
             <div class="page-header">
                 <h1>Gallery</h1>
@@ -438,7 +438,7 @@
                     <div class="col-md-3 col-sm-6 wow zoomIn animated">
                         <div class="single-table free">
                             <div class="table-heading">
-                                <h3>Dance Deal</h3>
+                                <h3>Best Buy Package</h3>
                             </div>
                             <div class="table-description">
                                 <div class="pricelist">
