--- a/MrBright/index.html
+++ b/MrBright/index.html
@@ -357,7 +357,7 @@
                     </div>
                 </div>
             </div>
-            <div class="clearfix visible-xs-block"></div>
+            <div class="clearfix"></div>
             <a href="#contact" class="btn btn-danger btn-lg btn-block">CONTACT US</a>
         </div>
     </section>
@@ -367,7 +367,6 @@
         <div class="container">
             <div class="row">
                 <div class="pricing-heading" id="pricefont">
-                    <h4>quality has its price</h4>
                     <h2>Package Plans</h2>
                 </div>
                 <div class="pricing-tables">
