--- a/MrBright/index.html
+++ b/MrBright/index.html
@@ -369,6 +369,7 @@
                                 <li class="list-group-item">1 Haze machine (where allowed)</li>
                                 <li class="list-group-item">THIS PACKAGE IS NOT FOR WEDDINGS OR SWEET 16 EVENTS , THOSE EVENTS MUST TAKE DANCE DEAL,BEST BUY OR ULTIMATE PACKAGE</li>
                             </ul>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -392,6 +393,7 @@
                                 <li class="list-group-item">Access to our Easy Party planning on line forms</li>
                                 <li class="list-group-item">NO TV with this Package !</li>
                             </ul>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -417,6 +419,7 @@
                                 <li class="list-group-item">Video montage provided by client to be shown on screen</li>
                                 <li class="list-group-item">Graphic disc with name and other highlights displayed on screen</li>
                             </ul>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -446,9 +449,13 @@
                                 <li class="list-group-item">Video montage shown on screen (we create if needed)</li>
                                 <li class="list-group-item">Photos taken throughout night (zap Shots) shown on two 50″ LED display OR 6 foot projection screen in-between videos</li>
                             </ul>
+                        </ul>
                     </div>
                 </div>
             </div>
+            <div class="clearfix"></div>
+            <a href="#contact" class="btn btn-danger btn-lg btn-block">CONTACT US</a>
+        </div>
     </section>
     <!-- end of price-plan section -->
     <!-- contact section -->
@@ -524,7 +531,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/custom.js"></script>
     <script src="js/wow.js"></script>
-    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyBGVNFrlzQURAt858e34_eOIwdyxzMqv0w"></script>
     <script src="js/gmaps.js"></script>
     <script>
     var map = new GMaps({
