--- a/MrBright/index.html
+++ b/MrBright/index.html
@@ -484,38 +484,50 @@
         </div>
         </div>
     </section>
-    <form class="form-inline">
-        <fieldset>
-            <div class="form-group">
-                <label for="textinput" class="control-label col-sm-2">Name:</label>
-                <br>
-                <div class="col-md-4 col-md-offset-4">
-                    <input type="text" class="form-control" id="textinput" placeholder="name">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="row">
+                    <div class="col-md-4 col-xs-3 col-sm-4">
+                        <label>Name:</label>
+                    </div>
+                    <div class="col-md-8 col-xs-9 col-sm-8">
+                        <input type="text" placeholder="Name">
+                    </div>
                 </div>
             </div>
-            <div class="form-group">
-                <label for="textinput" class="control-label col-sm-2">Email:</label>
-                <br>
-                <div class="col-md-4 col-md-offset-4">
-                    <input type="text" class="form-control" id="textinput" placeholder="E-Mail">
+            <div class="col-md-3">
+                <div class="row">
+                    <div class="col-md-4 col-xs-3 col-sm-4">
+                        <label>Email:</label>
+                    </div>
+                    <div class="col-md-8 col-xs-9 col-sm-8">
+                        <input type="text" placeholder="Email">
+                    </div>
                 </div>
             </div>
-            <div class="form-group">
-                <label for="textinput" class="control-label col-sm-2">Subject:</label>
-                <br>
-                <div class="col-md-4 col-md-offset-4">
-                    <input type="text" class="form-control" id="textinput" placeholder="Subject">
+            <div class="col-md-3">
+                <div class="row">
+                    <div class="col-md-4 col-xs-3 col-sm-4">
+                        <label>Subject:</label>
+                    </div>
+                    <div class="col-md-8 col-xs-9 col-sm-8">
+                        <input type="text" placeholder="Subject">
+                    </div>
                 </div>
             </div>
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="textarea">Message:</label>
-                <br>
-               <div class="col-md-4 col-md-offset-4">
-                    <input type="text" class="form-control" placeholder="Message">
+            <div class="col-md-3">
+                <div class="row">
+                    <div class="col-md-4 col-xs-3 col-sm-4">
+                        <label>Message:</label>
+                    </div>
+                    <div class="col-md-8 col-xs-9 col-sm-8">
+                        <input type="text" placeholder="Message">
+                    </div>
                 </div>
             </div>
-        </fieldset>
-    </form>
+        </div>
+    </div>
     <!-- google map api -->
     <div class="map">
         <div class="container-fluid">
